Began alignment and W3C compliance fixes

--- a/AO2Site.css
+++ b/AO2Site.css
@@ -137,9 +137,8 @@ hr {
     width: 75%;
     height: 10px;
     color: white;
-    border: 2px;
-    border-color: orange;
-    background: orange;
+    background: white;
+	border: 2px
 }
 hr.tophr {
     /*HR DIVIDERS*/
@@ -147,10 +146,17 @@ hr.tophr {
     width: 73%;
     height: 5px;
     color: white;
-    border: 2px;
-    border-color: orange;
-    background: white;
 }
+
+hr#footerhr {
+	width: 50%;
+    height: 3px;
+    color: white;
+	background: white;
+	margin-top: 80px;
+	margin-bottom: 30px;
+};
+
 div {} a {
     /*LINKS*/
 
@@ -192,18 +198,22 @@ p {
 
     font-family: 'Lato', sans-serif;
     color: white;
-    padding-left: 12.5%;
+	position: relative;
+    padding-left: 2.5%;
+	padding-right: 2.5%;
     text-align: justify;
     text-justify: inter-word;
-    font-size: 16pt;
+    font-size: 1em;
     -webkit-font-smoothing: antialiased;
 }
-h5 {
+#disclaimer {
     /*FOOTER TEXTS*/
 
     font-family: 'Lato', sans-serif;
     color: white;
-    font-size: 8pt;
+    font-size: 0.7em;
+	padding-left: 5px;
+	padding-right: 5px;
 }
 pre {
     font-family: 'Lato', sans-serif;
